[gd_scene load_steps=22 format=2]

[ext_resource path="res://Scenes/SandIsland.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/PortTown.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/WaterMesh.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/KinBodyShip.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Sail ship.obj" type="ArrayMesh" id=5]
[ext_resource path="res://Scripts/Ship.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Controls.gd" type="Script" id=7]
[ext_resource path="res://Assets/windIcon.png" type="Texture" id=8]
[ext_resource path="res://Scenes/RockCluster.tscn" type="PackedScene" id=9]
[ext_resource path="res://WindButtonFont.tres" type="DynamicFont" id=10]
[ext_resource path="res://Assets/Audio/BeachAmbience.ogg" type="AudioStream" id=11]
[ext_resource path="res://Assets/Audio/WindA.ogg" type="AudioStream" id=12]
[ext_resource path="res://Assets/Audio/WoodCrash.wav" type="AudioStream" id=13]
[ext_resource path="res://Assets/Audio/Bubbles.wav" type="AudioStream" id=14]
[ext_resource path="res://Assets/Audio/Sails.wav" type="AudioStream" id=15]

[sub_resource type="Environment" id=1]
ambient_light_color = Color( 1, 1, 1, 1 )

[sub_resource type="CylinderShape" id=2]

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Fonts/Marcellus-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Fonts/Marcellus-Regular.ttf"

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = SubResource( 5 )

[node name="BJam2020" type="Spatial"]
script = ExtResource( 7 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 50, 40 )
environment = SubResource( 1 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]

[node name="KinBodyShip" parent="." instance=ExtResource( 4 )]

[node name="KinBodyShip2" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0, -5 )
script = ExtResource( 6 )

[node name="Sail ship" type="MeshInstance" parent="KinBodyShip2"]
mesh = ExtResource( 5 )
material/0 = null
material/1 = null
material/2 = null
material/3 = null
material/4 = null
material/5 = null
material/6 = null
material/7 = null
material/8 = null
material/9 = null
material/10 = null
material/11 = null

[node name="CollisionShape" type="CollisionShape" parent="KinBodyShip2"]
transform = Transform( 2.5, 0, 0, 0, 1, 0, 0, 0, 2.5, 0, 1, 0 )
shape = SubResource( 2 )

[node name="GUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_N" type="Button" parent="GUI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -30.0
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 30 )
custom_fonts/font = ExtResource( 10 )
text = "NORTH"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_S" type="Button" parent="GUI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -30.0
margin_top = -30.0
margin_right = 30.0
rect_min_size = Vector2( 60, 30 )
custom_fonts/font = ExtResource( 10 )
text = "SOUTH"

[node name="Button_W" type="Button" parent="GUI"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -15.0
margin_right = 60.0
margin_bottom = 15.0
rect_min_size = Vector2( 60, 30 )
custom_fonts/font = ExtResource( 10 )
text = "WEST"

[node name="Button_E" type="Button" parent="GUI"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -15.0
margin_bottom = 15.0
rect_min_size = Vector2( 60, 30 )
custom_fonts/font = ExtResource( 10 )
text = "EAST"

[node name="ProgressWind" type="ProgressBar" parent="GUI"]
margin_top = 100.0
margin_right = 100.0
margin_bottom = 150.0
rect_min_size = Vector2( 100, 50 )
rect_rotation = -90.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindReady" type="Sprite" parent="GUI"]
position = Vector2( 24, 51 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="GoalCount" type="Label" parent="GUI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -117.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
custom_fonts/font = SubResource( 4 )
text = "Goals: 0"
align = 1
valign = 1

[node name="Popup" type="Popup" parent="GUI"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -100.0
margin_right = 250.0
margin_bottom = 100.0
rect_min_size = Vector2( 500, 200 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="GUI/Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.298039, 0.298039, 0.298039, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GUI/Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.5
margin_top = -19.5
margin_right = 66.5
margin_bottom = 19.5
custom_fonts/font = SubResource( 6 )
text = "YOU WIN"

[node name="Terrain" type="Node" parent="."]

[node name="WaterMesh" parent="Terrain" instance=ExtResource( 3 )]

[node name="SandIsland" parent="Terrain" instance=ExtResource( 1 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 15, -2.5, 5 )

[node name="SandIsland2" parent="Terrain" instance=ExtResource( 1 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, -25, -2.5, 5 )

[node name="RockCluster" parent="Terrain" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 5 )

[node name="RockCluster2" parent="Terrain" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, -15 )

[node name="PortTown" parent="Terrain" instance=ExtResource( 2 )]

[node name="Audio" type="Node" parent="."]

[node name="OceanAmbience" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 11 )
volume_db = -10.0
autoplay = true

[node name="WindGust" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 12 )

[node name="WoodCrash" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 13 )
volume_db = -20.0

[node name="Bubbles" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 14 )

[node name="Sails" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 15 )
[connection signal="pressed" from="GUI/Button_N" to="." method="_on_Button_N_pressed"]
[connection signal="pressed" from="GUI/Button_S" to="." method="_on_Button_S_pressed"]
[connection signal="pressed" from="GUI/Button_W" to="." method="_on_Button_W_pressed"]
[connection signal="pressed" from="GUI/Button_E" to="." method="_on_Button_E_pressed"]
